app/assets/stylesheets/brands-explore.css
.brands-explore-content-wrapper{
    margin: 30px 50px;
}

.brands-explore-advance-search{
    background-color: #f9f9f9;
    padding: 5px;
}

.brands-explore-advance-search select{
    width: 100%;
    display: block;
    height: 30px;
    border-radius: 0;
    border: 1px solid #d9d9d9;
    background-color: #f9f9f9;
    margin-bottom: 8px;
    padding-left: 5px;
    font-size: 13px;
}

.brands-explore-advance-search label {
    margin-top: 15px;
    font-size: 13px;
}

.brands-explore-content-wrapper hr{
    height: 2px;
    background-color: #ff3059;
    margin: 30px -50px 40px -50px;
    width: auto;
}

.brands-explore-content-wrapper .influencer-name {
    color: #ff3059;
    font-size: 16px;
    font-weight: 600;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    margin-bottom: 2px;
}

.brands-explore-content-wrapper .influencer-industry {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    height: 20px;
    position: relative;
}

.brands-explore-content-wrapper .influencer-industry.click-able{
    cursor: pointer;
    text-decoration: underline;
}

.industry-container{
    position: relative;
}

.title-tooltip{
    display: none;
    position: absolute;
    text-align: center;
    top: 25px;
    white-space: normal;
    font-size: 13px;
    border: 1px solid #B3ABAB;
    color: #333;
    padding: 5px;
    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
    background-color: #e6e6e6;
}

.brands-explore-content-wrapper .influencer-address {
    font-size: 13px;
}

.influencer-data {
    margin: 10px 10px 17px;
}

.influencer-biography {
    font-size: 13px;
    overflow: hidden;
    text-overflow: ellipsis;
    height: 72px;
}

.btn-view-profile {
    width: 100%;
    border-radius: 0;
    font-weight: 300;
}

.search-result .row{
    margin-right: -2px;
    margin-left: 0;
}

.padding-less-column-parent > [class *='col-']{
    padding-left: 0;
    padding-right: 4px;
}

.search-result-item{
    box-shadow: 0 0 1px #d9d9d9;
    background-color: #FFFFFF;
    padding: 6px;
    margin: 3px;
    box-shadow: 0px 3px 5px rgba(184,184,184,0.85)
}

.search-result-image{
    height: 120px;
    overflow: hidden;
}

/* =================== style sheet for brands profile show modal =======================*/

.modal-profile .modal-header{
    border-bottom: none;
}

.modal-profile .modal-body{
    padding: 0 60px;
    color: #000000;
    font-family: 'Hind Regular', sans-serif;
}

.modal-profile .modal-dialog{
    width: 88%;
    margin: 40px auto;
}

.btn-box{
    margin-top: 30px;
    float: left;
}

.follower-box{
    border-radius: 2px;
    box-shadow: 0 0 2px #d9d9d9;
    float: left;
    font-size: 15px;
    margin-right: 10px;
    margin-top: 12px;
    min-width: 100px;
    padding: 4px 15px;
    text-align: center;
}

.follower-box .follower-number{
    color: green;
    font-size: 22px;
    font-weight: 400;
}

.follower-box .view-profile-likes{
    color: #333333;
    font-size: 14px;
}

.follower-box p{
    font-size: 14px;
}
.btn-engage, .btn-message{
    width: 138px;
    height: 38px;
    display: block;
    color: #FFFFFF;
}

.btn-engage{
    background-color: #d9d9d9;
}

.btn-message{
    background-color: #f8c102;
}

.modal-profile .modal-body .profile-info{
    padding: 28px 138px 7px 0;
    width: 100%;
    text-align: justify;
}

.explore-influencer-picture {
    border-radius: 50%;
    border: 4px solid #cdcdcd;
    display: block;
    margin: 0 auto;
    width: 100px;
    height: 100px;
}

.explore-search-image {
    height: 100%;
    object-fit: cover;
    width: 100%;
}

.advanced-search {
    font-weight: 300;
    font-size: 16px;
}

.explore-adv-search {
    margin-right: 40px;
    margin-left: 15px;
}

.view-profile-modal {
    width: 75%;
    margin: auto;
    padding-bottom: 35px;
}

.social-account-tab-content {
    border: 1px solid #ddd ;
    border-top: none;
    padding-top: 15px;
    padding-right: 0;
    padding-bottom: 80px;
    margin-bottom: 20px;
    overflow: hidden;
}

.social-account-tabs .social-account-nav-tabs a {
    color: #696969;
}

.social-account-tabs .social-account-nav-tabs li.active .social-account-fa-edit {
    color: #3c8dbc;
}

.social-account-fa-edit {
    font-size: 1.5em;
    padding-right: 5px;
}

.social-account-tab-content .form-group input {
    width: 33%;
}

.social-account-tabs .social-account-nav-tabs li a {
    padding-right: 45px;
}

.influencer-profile-modal label {
    padding-right: 15px;
    padding-bottom: 10px;
    font-weight: 300;
    text-align: right;
    width: 111px;
}

.influencer-profile-modal input {
    background-color: white;
    padding: 4px;
}

.social-account-tabs .form-group {
    text-align: center;
    margin-bottom: 0;
    line-height: 1;
}

.social-account-tabs .panel-body {
    padding: 15px 0;
}

.modal-header .view-profile-modal-close {
    color: #d9d9d9;
    font-size: 3.4em;
    opacity: 1.5;
    font-weight: 100;
    margin-top: -20px;
}

.social-media-info {
    font-size: 18px;
    padding-top: 20px;
    padding-bottom: 20px;
}

.view-profile-fb-twitter-color {
    color: #329995;
}

.view-profile-industry {
    font-size: 18px;
    padding-top: 20px;
    padding-bottom: 15px;
}

.btn-message:hover {
    color: white;
    background-color: #f1b242;
}

.pricing-section {
    padding-top: 8px;
}

.influencer-modal-image {
    vertical-align: top;
    padding-right: 20px;
}

.view-profile-modal a {
    word-break: break-all;
}

@media
only screen and (max-width: 1060px) {
    .social-account-tab-content {
        padding-right: 0;
    }
}

@media
only screen and (max-width: 950px) {
    .like-send-request {
        margin-left: 20px;
    }

    .modal-profile .modal-body .profile-info {
        padding: 20px 0;
    }

    .view-profile-modal {
        width: 100%;
    }

    .influencer-profile-modal label {
        padding: 5px;
    }

    .brands-explore-content-wrapper{
        margin: 30px 30px;
    }

}

@media
only screen and (max-width: 767px) {
    .social-account-tab-content {
        padding-right: 10%;
    }

    .influencer-profile-modal input {
        width: 34%;
    }
}

@media
only screen and (max-width: 580px){
    .like-send-request {
        float: none !important;
    }

    .like-send-request, .btn-box {
        margin-left: 0;
    }

    .social-account-tab-content {
        padding-right: 0;
    }

    .modal-profile .modal-body {
        padding: 0 25px;
    }

    .btn-send-request {
        margin-left: 0;
    }

    .btn-message {
        width: auto;
    }

    .modal-profile .modal-dialog {
        width: 100%;
    }

    .influencer-profile-modal label {
        width: 100px;
    }

    .influencer-modal-image, .influencer-modal-details, .like-send-request {
        display: block !important;
    }

    .influencer-modal-details {
        text-align: center;
    }

    .follower-box, .btn-box {
        float: none;
        margin-right: 0;
    }

    .follower-box .follower-number {
        display: block !important;
    }
}

@media (max-width: 374px) {
    .brands-explore-advance-search .country-responsive-font, .brands-explore-advance-search #country {
        font-size: 11px;
    }
}

.social-account-tabs .influencer-social-tab-content {
    border-top: 1px solid #ddd;
    padding-top: 0;
}

.vertical-align-middle {
    vertical-align: middle;
}

